feat: surgical merge of stateful-engine-observability-validation → master
Selective integration excluding artifacts/binaries/generated reports.

## Production change
- Make GenericPartyAgent.classifyHandoffIfNeeded() public (ADR-025)

## yawl-benchmark module (new)
- Register yawl-benchmark in root pom.xml reactor
- Fix parent version 6.0.0 → 6.0.0-GA + add relativePath
- Use managed versions for junit-jupiter, commons-lang3, commons-collections4
- New agent framework: 7 benchmark agents (A2A, Chaos, Core, Memory, Pattern,
  PerformanceEnhancement, Coordinator) + 6 framework classes (BaseBenchmarkAgent,
  BenchmarkConfiguration, BenchmarkReport, BenchmarkResult, FallbackStrategy,
  PerformanceMonitor)
- JMH benchmarks: A2ACommunicationBenchmarks, A2AMessageLatency, A2AResilience,
  A2AThroughput + TestDataGenerator
- Container integration tests: MySQL, Postgres + fixtures

## CI/CD (new)
- .github/workflows/performance-check.yml — PR performance gate
- .github/workflows/performance-regression.yml — regression detection

## Benchmark scripts (new)
- benchmark-scripts/: run-benchmarks, run-chaos-tests, run-regression-tests,
  run-stress-tests, manage-baselines, monitoring, process-results + configs
- config/quality-gates/performance.toml
- scripts/: 17 new benchmark/regression/chaos operational scripts

## Test infrastructure (new, net-new files only)
- test/chaos/: A2AChaosTest, EnhancedChaosTest, ServiceChaosTest
- test/graalpy/performance/: 5 GraalPy benchmarks (PM4py, TPOT2, memory, etc.)
- test/integration/a2a/: A2AFullIntegrationTest, A2APerformanceSuite,
  A2ACommunicationBenchmarksIntegrationTest
- test/integration/benchmark/: 7 utility classes (data generators, collectors)
- test/integration/autonomous/: AutonomousAgentIntegrationTestSuite
- test/performance/edge/: 4 edge case tests (concurrent, deep nesting, payload, long-run)
- test/performance/integration/: 4 benchmarks (DB, EventSourcing, MCP/A2A, Stateless)
- test/performance/jmh/: 15 JMH benchmarks + au