@@ -43,12 +43,7 @@ import org.openjdk.jmh.runner.options.OptionsBuilder;
 @State(Scope.Benchmark)
 @Warmup(iterations = 3, time = 5, timeUnit = TimeUnit.SECONDS)
 @Measurement(iterations = 5, time = 10, timeUnit = TimeUnit.SECONDS)
-@Fork(value = 1, jvmArgs = {
-    "-Xms2g", "-Xmx4g",
-    "-XX:+UseZGC",
-    "-XX:+UseCompactObjectHeaders",
-    "-Djmh.executor=VIRTUAL_TPE"
-})
+@Fork(value = 1, jvmArgs = {"-Xms2g", "-Xmx4g", "-XX:+UseG1GC"})
 public class InterfaceBClientBenchmark {
 
     @Param({"10", "50", "100", "500", "1000"})
