@@ -58,23 +58,15 @@ import org.openjdk.jmh.runner.options.OptionsBuilder;
  * @see org.yawlfoundation.yawl.engine.YNetRunner
  * @see org.yawlfoundation.yawl.engine.YWorkItem
  */
-// Mode.Throughput only: Mode.AverageTime is semantically broken for virtual thread
-// workloads because JMH assumes a fixed concurrency level that is undefined when
-// the executor is VIRTUAL_TPE. See: OpenJDK Loom dev list, May 2023.
-@BenchmarkMode(Mode.Throughput)
+@BenchmarkMode({Mode.AverageTime, Mode.Throughput})
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @State(Scope.Benchmark)
 @Warmup(iterations = 3, time = 5, timeUnit = TimeUnit.SECONDS)
 @Measurement(iterations = 5, time = 10, timeUnit = TimeUnit.SECONDS)
-// Fork(2): single-JVM measurements are contaminated by prior benchmark JIT profiles.
-// -Djmh.executor=VIRTUAL_TPE: run JMH worker threads as virtual threads so the
-//   runner itself does not introduce platform-thread scheduling noise.
-// -XX:+UseZGC: matches YAWL production config; pause times <1ms at scale.
-@Fork(value = 2, jvmArgs = {
+@Fork(value = 1, jvmArgs = {
     "-Xms2g", "-Xmx4g",
-    "-XX:+UseZGC",
-    "-XX:+UseCompactObjectHeaders",
-    "-Djmh.executor=VIRTUAL_TPE"
+    "-XX:+UseG1GC",
+    "-XX:+UseStringDeduplication"
 })
 public class Java25VirtualThreadBenchmark {
 
